# example-poetry

./: main.py  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_example.py
