[tool.poetry]
name = "example-poetry"
version = "0.1.0"
description = ""
authors = ["clementsan <cvachet@sci.utah.edu>"]
readme = "README.md"
packages = [{include = "example_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
nornir-shared = { git = "https://github.com/clementsan/nornir-shared.git", branch = "dev" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
